--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-5 px-0 d-flex justify-content-end position-relative">
-                                <div class="box box1">box1</div>
+                                <div class="box box1 pulse">box1</div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-7 px-0 d-flex justify-content-end position-relative">
-                                <div class="box box2 mb-0">box2</div>
+                                <div class="box box2 mb-0 pulse">box2</div>
                                 <div class="vertical_line"></div>
                             </div>
                         </div>
